<resources>

    <string name="app_name">My Community</string>

    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>

    <string-array name="gender_list">
        <item>@string/gender_female</item>
        <item>@string/gender_male</item>
    </string-array>

    <string name="req_status_open">Open</string>
    <string name="req_status_progress">In Progress</string>
    <string name="req_status_vendor">Pending with vendor</string>
    <string name="req_status_closed">Closed</string>

    <string-array name="request_status_list">
        <item>@string/req_status_open</item>
        <item>@string/req_status_closed</item>
        <item>@string/req_status_progress</item>
        <item>@string/req_status_vendor</item>
    </string-array>

    <string name="apt_status_leasing">Leasing</string>
    <string name="apt_status_occupied">Occupied</string>
    <string name="apt_status_repair">In Repair/Renovation</string>
    <string name="apt_status_vacant">Vacant</string>

    <string-array name="apt_status_list">
        <item>@string/apt_status_leasing</item>
        <item>@string/apt_status_occupied</item>
        <item>@string/apt_status_repair</item>
        <item>@string/apt_status_vacant</item>
    </string-array>

    <string name="ipsum">Lorem ipsum dolor sit amet, erat sed accumsan sit, dolor curabitur justo a, vel non lobortis ultricies per. Pede metus quam dui velit, erat sodales taciti ullamcorper, orci risus praesent ac. Metus malesuada morbi semper, egestas sit elementum pellentesque, mauris mi varius rutrum amet, facilisis sit eros urna nisl. Vitae nec odio rhoncus, cum natoque volutpat sed, proin tincidunt ante mi arcu.</string>

    <string name="resident_signup_alert">Currently, new residents can only be added by the building manager. Please contact your building manager.</string>

    <!-- sample ad ids provided by Google for testing -->
    <string name="admob_sample_unit_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_sample_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="about_app_msg">
        This app is created as Capstone project for Udacity Android Nanodegree program. This app demonstrates usage of:
        \n 1. Third party library integration
        \n 2. Google services (Firebase Auth, Realtime DB, Storage, Ads)
        \n 3. Read network data (Firebase)
        \n 4. Data persistence (with offline Firebase and Room)
        \n 5. App widget
        \n 6. Notifications
        \n 7. Material design
    </string>
    <string name="appwidget_text">Checking Login Status</string>
    <string name="add_widget">Add widget</string>

    <string name="signup_id_hint_mgmt">Use an email ID that is associated with your management</string>
    <string name="signup_id_hint_resident">Use email ID that you provided to the management</string>

    <string name="required_field_error_msg">Required!</string>
    <string name="invalid_input_error_msg">Invalid</string>
    <string name="hint_post_title">Title</string>
    <string name="hint_resident_name">Resident Name</string>
    <string name="hint_post_desc">Description of the announcement post</string>
    <string name="hint_apt_name">Apartment Name</string>
    <string name="hint_num_rooms">Number of rooms</string>
    <string name="hint_apt_notes">Notes</string>
    <string name="btn_txt_submit">Submit</string>
    <string name="btn_txt_update">Update</string>
    <string name="btn_txt_add">Add</string>
    <string name="hint_request_title">Maintenance Request Title/Type</string>
    <string name="hint_req_apt">Apartment Name</string>
    <string name="hint_req_resident_name">Resident Name</string>
    <string name="hint_req_desc">Enter details of issue</string>
    <string name="hint_req_comments">Comments</string>
    <string name="btn_txt_cancel">Cancel</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_resident_email">Email ID</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_login_email">Email ID</string>
    <string name="hint_login_password">Password</string>
    <string name="btn_txt_login">Log In</string>
    <string name="btn_txt_new_resident">New Resident Sign-Up</string>
    <string name="btn_txt_new_mgmt">New Management Sign Up</string>
    <string name="header_new_cred">New Login Credentials</string>
    <string name="hint_passwd">Password</string>
    <string name="hint_confirm_passwd">Re-type password</string>
    <string name="header_new_community">New Community Information</string>
    <string name="btn_txt_signup">Sign Up</string>
    <string name="hint_community_name">Community Name</string>
    <string name="hint_community_desc">Enter some information about your community</string>
    <string name="hint_st_address">Street Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>
    <string name="hint_country">Country</string>
    <string name="content_desc_community_photo">Community Main Photo</string>
    <string name="content_desc_resident_photo">Resident Photo</string>


</resources>

