<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <!-- add variables here -->
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditApartmentDetails">

        <!-- Add upload picture control here on top - to be implemented later -->

        <EditText
            android:id="@+id/apt_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:layout_marginRight="@dimen/edittext_margin"
            android:hint="@string/hint_apt_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/apt_num_rooms_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:hint="@string/hint_num_rooms"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apt_name_et" />

        <Spinner
            android:id="@+id/apt_status_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:entries="@array/apt_status_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apt_num_rooms_et" />

        <EditText
            android:id="@+id/apt_notes_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:hint="@string/hint_apt_notes"
            android:maxLines="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apt_status_sp" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:text="@string/btn_txt_submit"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <!-- To be implemented later -->
        <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:text="@string/btn_txt_update"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_btn" />

    </android.support.constraint.ConstraintLayout>

</layout>