<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <!-- add variables here -->
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditMaintenanceDetails">

        <android.support.constraint.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="request_title_et,request_unit_et,
                        request_resident_et,request_desc_et,request_submit_btn"
            android:id="@+id/new_req_group" />

        <android.support.constraint.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids=""
            android:id="@+id/existing_req_group" />

        <!-- change this to request type -->
        <EditText
            android:id="@+id/request_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_margin"
            android:layout_marginRight="@dimen/edittext_margin"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:hint="@string/hint_request_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/request_unit_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:enabled="false"
            android:hint="@string/hint_req_apt"
            app:layout_constraintLeft_toLeftOf="@id/request_title_et"
            app:layout_constraintRight_toRightOf="@id/request_title_et"
            app:layout_constraintTop_toBottomOf="@id/request_title_et" />


        <EditText
            android:id="@+id/request_resident_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:enabled="false"
            android:hint="@string/hint_req_resident_name"
            app:layout_constraintLeft_toLeftOf="@id/request_unit_et"
            app:layout_constraintRight_toRightOf="@id/request_unit_et"
            app:layout_constraintTop_toBottomOf="@id/request_unit_et" />

        <Spinner
            android:id="@+id/request_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:entries="@array/request_status_list"
            app:layout_constraintLeft_toLeftOf="@id/request_resident_et"
            app:layout_constraintRight_toRightOf="@id/request_resident_et"
            app:layout_constraintTop_toBottomOf="@id/request_resident_et" />

        <EditText
            android:id="@+id/request_desc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:hint="@string/hint_req_desc"
            android:maxLines="7"
            app:layout_constraintLeft_toLeftOf="@id/request_status"
            app:layout_constraintRight_toRightOf="@id/request_status"
            app:layout_constraintTop_toBottomOf="@id/request_status" />

        <EditText
            android:id="@+id/request_comments_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:hint="@string/hint_req_comments"
            android:maxLines="5"
            app:layout_constraintLeft_toLeftOf="@id/request_desc_et"
            app:layout_constraintRight_toRightOf="@id/request_desc_et"
            app:layout_constraintTop_toBottomOf="@id/request_desc_et" />

        <Button
            android:id="@+id/request_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:background="@color/colorAccent"
            android:text="@string/btn_txt_submit"
            android:visibility="visible"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cancel_btn"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- to be implemented later -->
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            android:background="@color/colorAccent"
            android:text="@string/btn_txt_cancel"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/request_submit_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>