<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="community"
            type="com.malkoti.capstone.mycommunity.model.Community" />
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/community_info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/community_name_txtInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/community_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{community.name}"
                android:hint="@string/hint_community_name" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/community_desc_txtInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/community_name_txtInLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/community_desc_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{community.description}"
                android:hint="@string/hint_community_desc"
                android:maxLines="5" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/community_st_address_txtInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/community_desc_txtInLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/community_street_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{community.streetAddress}"
                android:hint="@string/hint_st_address" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/community_city_txtInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/community_st_address_txtInLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/community_city_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{community.city}"
                android:hint="@string/hint_city" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/community_state_txtInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/community_city_txtInLayout">

            <EditText
                android:id="@+id/community_state_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{community.state}"
                android:hint="@string/hint_state"
                android:inputType="textAutoComplete" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/community_zip_txtInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/community_state_txtInLayout">

            <EditText
                android:id="@+id/community_zip_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{community.zip}"
                android:hint="@string/hint_zip"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/community_country_txtInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/community_zip_txtInLayout">

            <EditText
                android:id="@+id/community_country_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{community.country}"
                android:hint="@string/hint_country"
                android:inputType="textAutoComplete" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/community_phone_txtInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/community_country_txtInLayout">

            <EditText
                android:id="@+id/community_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{community.phoneNum}"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</layout>